cmake_minimum_required(VERSION 3.1)
project(emp-pvc)

if(NOT CMAKE_BUILD_TYPE)
set(CMAKE_BUILD_TYPE Release)
endif(NOT CMAKE_BUILD_TYPE)
set(CMAKE_C_FLAGS "-pthread -Wall -march=native -O2 -maes -mrdseed")
set(CMAKE_CXX_FLAGS "${CMAKE_C_FLAGS}")
set(CMAKE_CXX_STANDARD 11)
find_path(CMAKE_FOLDER NAMES cmake/emp-tool-config.cmake)
include(${CMAKE_FOLDER}/cmake/common.cmake)
include(${CMAKE_FOLDER}/cmake/source_of_randomness.cmake)
include(${CMAKE_FOLDER}/cmake/threading.cmake)
add_definitions(-DTHREADING)

find_package(emp-ot REQUIRED)
find_package(emp-tool REQUIRED)
find_package(OpenSSL REQUIRED)
find_package(relic REQUIRED)
include_directories(${RELIC_INCLUDE_DIR} ${OPENSSL_INCLUDE_DIR})
find_package(OpenMP)
if (OPENMP_FOUND)
    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
endif()

message(STATUS ${EMP-TOOL_LIBRARIES})
link_directories(/usr/local/lib)
include_directories(include /usr/local/include)

enable_testing()
add_subdirectory(src)
add_subdirectory(test)

